Fixed parallax on mobile, need more images in back slide deck

--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -268,17 +268,15 @@ pre {
     height: 5px;
     margin: 0px;
     background: $slate-color-dark;
-    z-index: 1;
+    z-index: 0;
 }
 
-.parallax {
-  perspective: 1px;
-  z-index: 0;
-  height: 92vh;
-  min-width: 400px;
-  overflow-x: hidden;
-  overflow-y: auto;
-  -webkit-perspective-origin-x: 100%;
+.parallax{
+    z-index: 0;
+    height: 92vh;
+    min-width: 400px;
+    overflow-x: hidden;
+    overflow-y: auto;
 }
 
 .parallax__layer {
@@ -287,15 +285,37 @@ pre {
   right: 0;
   bottom: 0;
   left: 0;
-  -webkit-transform-origin-x: 100%;
 }
-.parallax__layer--base {
-  transform: translateZ(0);
+
+
+@supports ((perspective: 1px) and (not (-webkit-overflow-scrolling: touch))) {
+    .parallax {
+      perspective: 1px;
+      z-index: 0;
+      height: 92vh;
+      min-width: 400px;
+      overflow-x: hidden;
+      overflow-y: auto;
+      -webkit-perspective-origin-x: 100%;
+    }
+
+    .parallax__layer {
+      position: absolute;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: 0;
+      -webkit-transform-origin-x: 100%;
+    }
+    .parallax__layer--base {
+      transform: translateZ(0);
+    }
+    .parallax__layer--back {
+      position: fixed;
+      transform: translateZ(-1px) scale(2);
+    }
 }
-.parallax__layer--back {
-  position: fixed;
-  transform: translateZ(-1px) scale(2);
-}
+
 
 /*
  * Clearfix
